# action_client_panel

./: .travis.yml  ActionClients.yaml  CMakeLists.txt  README.md  dependencies.rosinstall  package.xml  plugin_description.xml
src/: action_client_panel.cpp  action_client_panel.h
src/clients/: InsertObjectClient.cpp  InsertObjectClient.h  InsertObjectInCavityClient.cpp  InsertObjectInCavityClient.h  MoveBaseClient.cpp  MoveBaseClient.h  PerceiveCavityClient.cpp  PerceiveCavityClient.h  PerceiveLocationClient.cpp  PerceiveLocationClient.h  PickObjectClient.cpp  PickObjectClient.h  PlaceObjectClient.cpp  PlaceObjectClient.h  StageObjectClient.cpp  StageObjectClient.h  UnStageObjectClient.cpp  UnStageObjectClient.h
src/clients/clientBase/: ClientBase.cpp  ClientBase.h  InsertObjectClientBase.cpp  InsertObjectClientBase.h  ObjectManipulationClientBase.cpp  ObjectManipulationClientBase.h  PerceiveClientBase.cpp  PerceiveClientBase.h  StagingClientBase.cpp  StagingClientBase.h
