<?xml version="1.0"?>
<package format="2">
  <name>action_client_plugin</name>
  <version>1.0.0</version>
  <description>RViz plugin to trigger create action clients and trigger commands to the action server</description>

  <maintainer email="sushant.chavan@inf.h-brs.de">Sushant Vijay Chavan</maintainer>
  <maintainer email="ahmed.abdelrahman@inf.h-brs.de">Ahmed Faisal Abdelrahman</maintainer>

  <license>BSD3</license>

  <author email="sushant.chavan@inf.h-brs.de">Sushant Vijay Chavan</author>
  <author email="ahmed.abdelrahman@inf.h-brs.de">Ahmed Faisal Abdelrahman</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>mir_yb_action_msgs</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>mir_yb_action_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>mir_yb_action_msgs</exec_depend>

  <export>
  <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
